--- a/src/Style/Loginpage.css
+++ b/src/Style/Loginpage.css
@@ -45,7 +45,7 @@ input {
     margin: 4px;
     cursor: pointer;
     border-radius: 5px;
-    font-size: 25px;
+    font-size: 25px
 }
 .create-account {
     margin-top:10px;
