--- a/src/Style/Card.css
+++ b/src/Style/Card.css
@@ -3,7 +3,6 @@
     flex-wrap: wrap;
     justify-content: center;
     border-radius: 10px;
-    margin-top: 5%;
     border: 3px solid black;
     background-color: antiquewhite;
     padding-right: 10px;
@@ -11,6 +10,10 @@
     padding-top: 10px;
     transition: 0.2s;
     text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .cards:hover {
