--- a/src/Style/Homepage.css
+++ b/src/Style/Homepage.css
@@ -1,6 +1,12 @@
 .carditems {
     display: flex;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-items: center;
+    margin: 40px 40px 40px 40px;
+}
+
+.ent {
+    height: 100%;
 }
