--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     background-color: #ffb6c1;
     padding-left: 30px;
