--- a/src/Style/Loginpage.css
+++ b/src/Style/Loginpage.css
@@ -4,11 +4,12 @@
     display: grid;
     width: 360px;
     margin: 0px auto;
-    margin-top: 5%;
     align-items: center;
     justify-items: center;
     border-radius: 10px;
     font-size: 25px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .head {
     margin-bottom: 0; 
