--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -1,37 +1,48 @@
-@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap");
 
 .navdiv {
-    font-family: 'Do Hyeon', sans-serif;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    background-color: #ffb6c1;
-    padding-left: 30px;
-    padding-right: 30px;
-    border-bottom: 4px solid black;
+  font-family: "Do Hyeon", sans-serif;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: #ffb6c1;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-bottom: 4px solid black;
 }
 
 .navtitle {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    font-size: 40px;
-    text-decoration: none;
-    color: purple;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
+  font-weight: bold;
+  font-size: 40px;
+  text-decoration: none;
+  color: purple;
 }
 
 .navitem {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    font-size: 30px;
-    text-decoration: none;
-    color: black;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-weight: bold;
+  font-size: 30px;
+  text-decoration: none;
+  color: black;
 }
 
 .navitem:hover {
-    color: purple;
+  color: purple;
+}
+
+@media screen and (max-width: 452px) {
+  .navdiv {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
