--- a/src/Style/Mappage.css
+++ b/src/Style/Mappage.css
@@ -1,39 +1,176 @@
 .mapcont {
-    margin-top:10px;
-    margin-bottom:10px;
-    width: 95%;
-    border: 4px solid orange;
-    display: flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 95%;
+  border: 4px solid orange;
+  display: flex;
+  position: relative;
 }
 
 .mapfull {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .kmlamap {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.maplinks {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 3vh;
-    margin-right: 3vh;
+.map1 {
+    position: absolute;
+    top:19%;
+    left: 4%;
+    width: 14vw;
+    height: 14vw;
+    background-color: transparent;
+    font-size: 6vw;
+    font-weight: bold;
+    color: black;
+    transition: 0.3s;
+    border-radius: 50%;
+    border: none;
 }
 
-.numclick {
-    font-size: 30px;
-    text-decoration: none;
+.map1:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 7vw;
+    cursor: pointer;
     color: black;
 }
 
-.numclick:hover {
-    color: orange;
+.map2 {
+    position: absolute;
+    top:28%;
+    left: 22%;
+    width: 14vw;
+    height: 14vw;
+    background-color: transparent;
+    font-size: 6vw;
+    font-weight: bold;
+    color: black;
+    transition: 0.3s;
+    border-radius: 50%;
+    border: none;
+}
+
+.map2:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 7vw;
     cursor: pointer;
+    color: black;
+}
+
+.map3 {
+    position: absolute;
+    top:56%;
+    left: 22%;
+    width: 14vw;
+    height: 14vw;
+    background-color: transparent;
+    font-size: 6vw;
+    font-weight: bold;
+    color: black;
+    transition: 0.3s;
+    border-radius: 50%;
+    border: none;
+}
+
+.map3:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 7vw;
+    cursor: pointer;
+    color: black;
+}
+
+.map4 {
+    position: absolute;
+    top:65%;
+    left: 7%;
+    width: 14vw;
+    height: 14vw;
+    background-color: transparent;
+    font-size: 6vw;
+    font-weight: bold;
+    color: black;
+    transition: 0.3s;
+    border-radius: 50%;
+    border: none;
+}
+
+.map4:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 7vw;
+    cursor: pointer;
+    color: black;
+}
+
+.map5 {
+    position: absolute;
+    top: 12%;
+    left: 34%;
+    width: 14vw;
+    height: 14vw;
+    background-color: transparent;
+    font-size: 6vw;
+    font-weight: bold;
+    color: black;
+    transition: 0.3s;
+    border-radius: 50%;
+    border: none;
+}
+
+.map5:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 7vw;
+    cursor: pointer;
+    color: black;
+}
+
+.map6 {
+    position: absolute;
+    top:39%;
+    left: 55%;
+    width: 14vw;
+    height: 14vw;
+    background-color: transparent;
+    font-size: 6vw;
+    font-weight: bold;
+    color: black;
+    transition: 0.3s;
+    border-radius: 50%;
+    border: none;
+}
+
+.map6:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 7vw;
+    cursor: pointer;
+    color: black;
+}
+
+.map7 {
+    position: absolute;
+    top:56%;
+    left: 45%;
+    width: 14vw;
+    height: 14vw;
+    background-color: transparent;
+    font-size: 6vw;
+    font-weight: bold;
+    color: black;
+    transition: 0.3s;
+    border-radius: 50%;
+    border: none;
+}
+
+.map7:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 7vw;
+    cursor: pointer;
+    color: black;
 }
